include/vsmc/vsmc.h

/// \defgroup C_API C API
/// @{

/// \defgroup C_API_RNG Random number generating
/// @{

/// \brief `vsmc::RNG`
typedef struct {
    int state[64];
} vsmc_rng;
int vsmc_mkl_brng_ars_4x32(void);
int vsmc_mkl_brng_ars_8x32(void);
int vsmc_mkl_brng_ars_1x64(void);
int vsmc_mkl_brng_ars_2x64(void);
int vsmc_mkl_brng_ars_4x64(void);
int vsmc_mkl_brng_ars_8x64(void);
int vsmc_mkl_brng_rdrand16(void);
int vsmc_mkl_brng_rdrand32(void);
int vsmc_mkl_brng_rdrand64(void);
/// @}

/// \defgroup C_API_Resample Resample algorithms
/// @{

typedef enum {
    VSMC_RESAMPLE_MULTINOMIAL,
    VSMC_RESAMPLE_STRATIFIED,
    VSMC_RESAMPLE_SYSTEMATIC,
    VSMC_RESAMPLE_RESIDUAL,
    VSMC_RESAMPLE_RESIDUAL_STRATIFIED,
    VSMC_RESAMPLE_RESIDUAL_SYSTEMATIC
} vsmc_resample_scheme;
void vsmc_resample_trans_u01_index(
    int m, int n, const double *weight, const double *u01, int *src_idx);
int vsmc_resample_trans_residual(
    int m, int n, const double *weight, double *resid, int *integ);
void vsmc_resample_multinomial(
    int m, int n, vsmc_rng *rng_ptr, const double *weight, int *replication);
void vsmc_resample_stratified(
    int m, int n, vsmc_rng *rng_ptr, const double *weight, int *replication);
void vsmc_resample_systematic(
    int m, int n, vsmc_rng *rng_ptr, const double *weight, int *replication);
void vsmc_resample_residual(
    int m, int n, vsmc_rng *rng_ptr, const double *weight, int *replication);
void vsmc_resample_residual_stratified(
    int m, int n, vsmc_rng *rng_ptr, const double *weight, int *replication);
void vsmc_resample_residual_systematic(
    int m, int n, vsmc_rng *rng_ptr, const double *weight, int *replication);
void vsmc_resample(int m, int n, vsmc_rng *rng_ptr, const double *weight,
    int *replication, vsmc_resample_scheme scheme);