include/vsmc/vsmc.f90


    interface
        function vsmc_mkl_brng_ars_4x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_ars_4x32
        end function vsmc_mkl_brng_ars_4x32
    end interface

    interface
        function vsmc_mkl_brng_ars_8x32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_ars_8x32
        end function vsmc_mkl_brng_ars_8x32
    end interface

    interface
        function vsmc_mkl_brng_ars_1x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_ars_1x64
        end function vsmc_mkl_brng_ars_1x64
    end interface

    interface
        function vsmc_mkl_brng_ars_2x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_ars_2x64
        end function vsmc_mkl_brng_ars_2x64
    end interface

    interface
        function vsmc_mkl_brng_ars_4x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_ars_4x64
        end function vsmc_mkl_brng_ars_4x64
    end interface

    interface
        function vsmc_mkl_brng_ars_8x64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_ars_8x64
        end function vsmc_mkl_brng_ars_8x64
    end interface

    interface
        function vsmc_mkl_brng_rdrand16() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_rdrand16
        end function vsmc_mkl_brng_rdrand16
    end interface

    interface
        function vsmc_mkl_brng_rdrand32() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_rdrand32
        end function vsmc_mkl_brng_rdrand32
    end interface

    interface
        function vsmc_mkl_brng_rdrand64() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_mkl_brng_rdrand64
        end function vsmc_mkl_brng_rdrand64
    end interface

    enum, bind(c)
        enumerator VSMC_RESAMPLE_SCHEME_MULTINOMIAL
        enumerator VSMC_RESAMPLE_SCHEME_STRATIFIED
        enumerator VSMC_RESAMPLE_SCHEME_SYSTEMATIC
        enumerator VSMC_RESAMPLE_SCHEME_RESIDUAL
        enumerator VSMC_RESAMPLE_SCHEME_RESIDUAL_STRATIFIED
        enumerator VSMC_RESAMPLE_SCHEME_RESIDUAL_SYSTEMATIC
    end enum

    interface
        subroutine vsmc_resample_trans_u01_replication(&
                m, n, weight, u01, replication) bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int), value :: m
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: weight
            real(kind = c_double), dimension(*) :: u01
            integer(kind = c_int), dimension(*) :: replication
        end subroutine vsmc_resample_trans_u01_replication
    end interface

    interface
        subroutine vsmc_resample_trans_u01_index(&
                m, n, weight, u01, src_idx) bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int), value :: m
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: weight
            real(kind = c_double), dimension(*) :: u01
            integer(kind = c_int), dimension(*) :: src_idx
        end subroutine vsmc_resample_trans_u01_index
    end interface

    interface
        subroutine vsmc_resample_trans_replication_index(&
                m, n, replication, src_idx) bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int), value :: m
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: replication
            integer(kind = c_int), dimension(*) :: src_idx
        end subroutine vsmc_resample_trans_replication_index
    end interface

    interface
        subroutine vsmc_resample_trans_index_replication(&
                m, n, src_idx, replication) bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int), value :: m
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: src_idx
            integer(kind = c_int), dimension(*) :: replication
        end subroutine vsmc_resample_trans_index_replication
    end interface

    interface
        function vsmc_resample_trans_residual(&
                m, n, weight, resid, integ) bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int), value :: m
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: weight
            real(kind = c_double), dimension(*) :: resid
            integer(kind = c_int), dimension(*) :: integ
        end function vsmc_resample_trans_residual
    end interface

    interface
        subroutine vsmc_resample_multinomial(&
                m, n, rng, weight, replication) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            integer(kind = c_int), value :: m
            integer(kind = c_int), value :: n
            type(vsmc_rng) :: rng
            real(kind = c_double), dimension(*) :: weight
            integer(kind = c_int), dimension(*) :: replication
        end subroutine vsmc_resample_multinomial
    end interface

    interface
        subroutine vsmc_resample_stratified(&
                m, n, rng, weight, replication) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            integer(kind = c_int), value :: m
            integer(kind = c_int), value :: n
            type(vsmc_rng) :: rng
            real(kind = c_double), dimension(*) :: weight
            integer(kind = c_int), dimension(*) :: replication
        end subroutine vsmc_resample_stratified
    end interface

    interface
        subroutine vsmc_resample_systematic(&
                m, n, rng, weight, replication) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            integer(kind = c_int), value :: m
            integer(kind = c_int), value :: n
            type(vsmc_rng) :: rng
            real(kind = c_double), dimension(*) :: weight
            integer(kind = c_int), dimension(*) :: replication
        end subroutine vsmc_resample_systematic
    end interface

    interface
        subroutine vsmc_resample_residual(&
                m, n, rng, weight, replication) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            integer(kind = c_int), value :: m
            integer(kind = c_int), value :: n
            type(vsmc_rng) :: rng
            real(kind = c_double), dimension(*) :: weight
            integer(kind = c_int), dimension(*) :: replication
        end subroutine vsmc_resample_residual
    end interface

    interface
        subroutine vsmc_resample_residual_stratified(&
                m, n, rng, weight, replication) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            integer(kind = c_int), value :: m
            integer(kind = c_int), value :: n
            type(vsmc_rng) :: rng
            real(kind = c_double), dimension(*) :: weight
            integer(kind = c_int), dimension(*) :: replication
        end subroutine vsmc_resample_residual_stratified
    end interface

    interface
        subroutine vsmc_resample_residual_systematic(&
                m, n, rng, weight, replication) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            integer(kind = c_int), value :: m
            integer(kind = c_int), value :: n
            type(vsmc_rng) :: rng
            real(kind = c_double), dimension(*) :: weight
            integer(kind = c_int), dimension(*) :: replication
        end subroutine vsmc_resample_residual_systematic
    end interface

    interface
        subroutine vsmc_resample(&
                m, n, rng, weight, replication, scheme) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            integer(kind = c_int), value :: m
            integer(kind = c_int), value :: n
            type(vsmc_rng) :: rng
            real(kind = c_double), dimension(*) :: weight
            integer(kind = c_int), dimension(*) :: replication
            integer(kind = kind(VSMC_RESAMPLE_SCHEME_MULTINOMIAL)) scheme
        end subroutine vsmc_resample
    end interface

end module vsmc
